deps/chakrashim/core/test/inlining/linenumber1.baseline
linenumber1.js(5, 5) JavaScript runtime error: 'p0' is undefined
