deps/chakrashim/core/test/inlining/linenumber1.js
//-------------------------------------------------------------------------------------------------------
// Copyright (C) Microsoft. All rights reserved.
// Licensed under the MIT license. See LICENSE.txt file in the project root for full license information.
//-------------------------------------------------------------------------------------------------------

function f() { return 42; }
function main()
{
    var i = 0;
    return f() - p0;
}

main();
